--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -360,10 +360,27 @@ navbar {
 
                 .nametag {
                     color: white;
-                    font-weight: bold;
                     bottom: 10px;
                     position: absolute;
                     left:10px;
+                    bottom: 10px;
+                }
+
+                .video-off {
+                    color: white;
+                    bottom: 10px;
+                    position: absolute;
+                    left:10px;
+                    top: 40%;
+                    left:45%;
+                }
+
+                .mute-icon {
+                    color: rgb(214, 52, 52);
+                    bottom: 10px;
+                    position: absolute;
+                    right:10px;
+                    font-size:20px;
                     bottom: 10px;
                 }
             }
@@ -392,10 +409,27 @@ navbar {
 
                 .nametag {
                     color: white;
-                    font-weight: bold;
                     bottom: 10px;
                     position: absolute;
                     left:10px;
+                    bottom: 10px;
+                }
+
+                .video-off {
+                    color: white;
+                    bottom: 10px;
+                    position: absolute;
+                    left:10px;
+                    top: 40%;
+                    left:45%;
+                }
+
+                .mute-icon {
+                    color: rgb(214, 52, 52);
+                    bottom: 10px;
+                    position: absolute;
+                    right:10px;
+                    font-size:20px;
                     bottom: 10px;
                 }
             }
