--- a/public/css/style.css
+++ b/public/css/style.css
@@ -321,6 +321,7 @@ navbar .logo {
   color: white;
   bottom: 10px;
   position: absolute;
+  font-weight: bold;
   left: 10px;
   top: 40%;
   left: 45%;
@@ -362,6 +363,7 @@ navbar .logo {
 .container-room .left-cont .video-cont-single .video-box .video-off {
   color: white;
   bottom: 10px;
+  font-weight: bold;
   position: absolute;
   left: 10px;
   top: 40%;
