--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -370,6 +370,7 @@ navbar {
                     color: white;
                     bottom: 10px;
                     position: absolute;
+                    font-weight: bold;
                     left:10px;
                     top: 40%;
                     left:45%;
@@ -418,6 +419,7 @@ navbar {
                 .video-off {
                     color: white;
                     bottom: 10px;
+                    font-weight: bold;
                     position: absolute;
                     left:10px;
                     top: 40%;
